--- a/.github/workflows/staging-ci.yaml
+++ b/.github/workflows/staging-ci.yaml
@@ -9,7 +9,7 @@ jobs:
   job_1:
     name: Job 1
     runs-on: ubuntu-latest
-    environment: production
+    environment: staging
     steps:
     - uses: actions/checkout@v3
     - name: Output
