--- a/.github/workflows/production-ci.yaml
+++ b/.github/workflows/production-ci.yaml
@@ -1,4 +1,8 @@
 name: Production CI
+author: Howard
+description: |
+  This is a test workflow to test the environment variable
+  in the production environment.
 
 on:
   push: 
